--- a/gallery.html
+++ b/gallery.html
@@ -28,8 +28,14 @@
         <a href="skills.html">Skills</a>
         <a href="gallery.html" class="active">Gallery</a>
         <a href="contact.html">Contact</a>
+        <button id="muteButton" class="mute-button">🔇</button>
 
     </div>
+
+    <audio id="backgroundMusic" loop>
+        <source src="hajime.m4a">
+        Your browser does not support the audio element.
+    </audio>
 
     <div class="cursor" id="customCursor"></div>
     <script src="script.js"></script>
